--- a/2 constructing.tex
+++ b/2 constructing.tex
@@ -9,8 +9,6 @@ equivariantly diffeomorphic to each other as smooth manifolds.
 % two classes of spaces can be identified with each other via the image 
 % of their moment maps.
 
-
-
 \subsection{Delzant polytopes}
 Let $V$ be a real vector space of dimension $n$ and let $V_\Z$
 be a lattice inside $V$. Given 
@@ -53,8 +51,6 @@ pair vector fields with 1-forms. We say that a vector field $X$ is \emph{Hamilto
 the corresponding 1-form $\iota_X\omega = \omega(X,\cdot)$ is exact, in which case 
 it is equal to $dH$ for some smooth function $H$. The function $H$ is called a
 \emph{Hamiltonian} of $X$. 
-
-\hfill
 
 Given a Lie group $G$ acting on $M$ by symplectomorphisms,
 the Lie algebra $\mathfrak{g}$ acts on $M$ by symplectic vector fields.
@@ -160,8 +156,6 @@ back the Fubini-Study form. Moreover, the action of $T$ on $M$
  is Hamiltonian with respect to $\omega$.
 \end{proof}
 
-\hfill
-
 Conversely, given a toric symplectic manifold $(M,\omega)$, we can associate a 
 smooth projective toric variety to the moment polytope $\mu(M)$ which will be
 equivariantly symplectomorphic to $M$.
@@ -171,8 +165,6 @@ We describe how to construct $M$ as the symplectic reduction of affine space $\C
 a particular moment map. In particular, $M$ carries a natural symplectic form $\omega$ and 
 a Hamiltonian $T$-action.
 This section follows \cite{lsg}. 
-
-\hfill 
 
 Let $P$ be a Delzant polytope.
 There are maps \begin{align*}
@@ -196,8 +188,6 @@ standard Hamiltonian torus action \begin{align*}
 \end{align*}
 The subtorus $K$ acts on $\C^N$ via restriction and the restricted action is 
 Hamiltonian. Moreover, the moment map for the action of $K$ is given by $i^*\circ\phi:M\to k^*$.
-
-\hfill
 
 Let $Z = (i*^\circ \phi)^{-1}(0)$ be the zero level set of the moment map. The following 
 claims are all justified in \cite{lsg}.
@@ -252,8 +242,7 @@ is a smooth projective toric variety \red{because it is a projective GIT quotien
 \subsection{Kempf-Ness theorem}
 We want to compare the symplectic quotient to the projective GIT quotient.  First recall
 that if $K$ is a real compact group, then its complexification $G := K_\C$ is a 
-complex Lie group which contains $K$ and $\mf g = \mf k \oplus i\mf k$ is the complexification
- of $\mf k$. See \cite{hoskins} for more details about the following theorems.
+complex Lie group which contains $K$ and $\mf g = \mf k \oplus i\mf k$ is the complexification of $\mf k$. See \cite{hoskins} for more details about the following theorems.
 
 \begin{theorem}
     Complexification defines a bijection between the isomorphism
@@ -382,8 +371,6 @@ holomorphic sections of $\cL$.
     A holomorphic section of $\cL$ over $M$ corresponds to a $K_\C$-equivariant holomorphic function $f:U\to \C$. 
     Such $f$ extends to all of $\C^N$ because of Hartog's theorem (A holomorphic function on $\C^N$ for $N>1$ canont have 
     an isolated singularity and therefore cannot have a singularity on a submanifold of codimension $\geq 2$).
-
-    \hfill
 
     Write such a function as its Taylor series so that \begin{align*}
         f = \sum_{\alpha\in\N^n} c_\alpha z^\alpha
