--- a/refs.bib
+++ b/refs.bib
@@ -35,12 +35,14 @@ year = {2001}
 @book{fulton-anderson,
 author = {Fulton, William and Anderson, David},
 title = {Equivariant Cohomology in Algebraic Geometry},
+year = {2016}
 }
 
 
 @article{hoskins,
 author = {Hoskins,Victoria},
 title = {Geometric invariant theory and symplectic quotients},
+year = {2012}
 }
 
 @book{htt,
@@ -53,9 +55,8 @@ year = {2008}
 @book{tu,
 author = {Tu, Loring},
 title = {Introductory Lectures on Equivariant Cohomology},
+year = {2016}
 }
-
-
 
 @book{huybrechts,
 author = {Huybrechts, Daniel},
